export interface Behaviour {
  behaviourId: number;
  name: string;
  behaviourTypeId: number;
  isDesired?: boolean;
  description?: string;
}
