export interface Frequency {
  frequencyId: number | string;
  frequency: number;
  frequencyTypeId: number | string;
  isDesired?: boolean;
}
